--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
           <h2 class="hidden">Features</h2>
           <ul class="features features-wrap list">
             <li class="feature-item-wrap">
+              <div class="feature-thumb">
+                <svg class="feature-image" width="64" height="64">
+                  <use href="./images/symbols.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="subtitle">Strategy</h3>
               <p class="text">
                 Our goal is to identify the business problem to walk away with
@@ -72,6 +77,11 @@
               </p>
             </li>
             <li class="feature-item-wrap">
+              <div class="feature-thumb">
+                <svg class="feature-image" width="64" height="64">
+                  <use href="./images/symbols.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="subtitle">Punctuality</h3>
               <p class="text">
                 Bring the key message to the brand's audience for the best price
@@ -79,6 +89,11 @@
               </p>
             </li>
             <li class="feature-item-wrap">
+              <div class="feature-thumb">
+                <svg class="feature-image" width="64" height="64">
+                  <use href="./images/symbols.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="subtitle">Diligence</h3>
               <p class="text">
                 Research and confirm brands that present the strongest digital
@@ -86,6 +101,11 @@
               </p>
             </li>
             <li class="feature-item-wrap">
+              <div class="feature-thumb">
+                <svg class="feature-image" width="64" height="64">
+                  <use href="./images/symbols.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="subtitle">Technologies</h3>
               <p class="text">
                 Design practice focused on digital experiences. We bring forth a
@@ -142,6 +162,40 @@
               <div class="section-card-info">
                 <h3 class="subtitle">Mark Guerrero</h3>
                 <p class="text">Product Designer</p>
+                <ul class="card-social list">
+                  <li class="card-social-item">
+                    <a href="" class="card-social-link">
+                      <svg class="card-social-icon" width="16" height="16">
+                        <use
+                          href="./images/symbols.svg#icon-instagram"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="card-social-item">
+                    <a href="" class="card-social-link"
+                      ><svg class="card-social-icon" width="16" height="16">
+                        <use
+                          href="./images/symbols.svg#icon-twitter"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="card-social-item">
+                    <a href="" class="card-social-link"
+                      ><svg class="card-social-icon" width="16" height="16">
+                        <use
+                          href="./images/symbols.svg#icon-facebook"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="card-social-item">
+                    <a href="" class="card-social-link"
+                      ><svg class="card-social-icon" width="16" height="16">
+                        <use
+                          href="./images/symbols.svg#icon-linkedin"
+                        ></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="section-card">
@@ -154,6 +208,40 @@
               <div class="section-card-info">
                 <h3 class="subtitle">Tom Ford</h3>
                 <p class="text">Frontend Developer</p>
+                <ul class="card-social list">
+                  <li class="card-social-item">
+                    <a href="" class="card-social-link">
+                      <svg class="card-social-icon" width="16" height="16">
+                        <use
+                          href="./images/symbols.svg#icon-instagram"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="card-social-item">
+                    <a href="" class="card-social-link"
+                      ><svg class="card-social-icon" width="16" height="16">
+                        <use
+                          href="./images/symbols.svg#icon-twitter"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="card-social-item">
+                    <a href="" class="card-social-link"
+                      ><svg class="card-social-icon" width="16" height="16">
+                        <use
+                          href="./images/symbols.svg#icon-facebook"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="card-social-item">
+                    <a href="" class="card-social-link"
+                      ><svg class="card-social-icon" width="16" height="16">
+                        <use
+                          href="./images/symbols.svg#icon-linkedin"
+                        ></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="section-card">
@@ -166,6 +254,40 @@
               <div class="section-card-info">
                 <h3 class="subtitle">Camilla Garcia</h3>
                 <p class="text">Marketing</p>
+                <ul class="card-social list">
+                  <li class="card-social-item">
+                    <a href="" class="card-social-link">
+                      <svg class="card-social-icon" width="16" height="16">
+                        <use
+                          href="./images/symbols.svg#icon-instagram"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="card-social-item">
+                    <a href="" class="card-social-link"
+                      ><svg class="card-social-icon" width="16" height="16">
+                        <use
+                          href="./images/symbols.svg#icon-twitter"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="card-social-item">
+                    <a href="" class="card-social-link"
+                      ><svg class="card-social-icon" width="16" height="16">
+                        <use
+                          href="./images/symbols.svg#icon-facebook"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="card-social-item">
+                    <a href="" class="card-social-link"
+                      ><svg class="card-social-icon" width="16" height="16">
+                        <use
+                          href="./images/symbols.svg#icon-linkedin"
+                        ></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="section-card">
@@ -178,7 +300,91 @@
               <div class="section-card-info">
                 <h3 class="subtitle">Daniel Wilson</h3>
                 <p class="text">UI Designer</p>
+                <ul class="card-social list">
+                  <li class="card-social-item">
+                    <a href="" class="card-social-link">
+                      <svg class="card-social-icon" width="16" height="16">
+                        <use
+                          href="./images/symbols.svg#icon-instagram"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="card-social-item">
+                    <a href="" class="card-social-link"
+                      ><svg class="card-social-icon" width="16" height="16">
+                        <use
+                          href="./images/symbols.svg#icon-twitter"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="card-social-item">
+                    <a href="" class="card-social-link"
+                      ><svg class="card-social-icon" width="16" height="16">
+                        <use
+                          href="./images/symbols.svg#icon-facebook"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="card-social-item">
+                    <a href="" class="card-social-link"
+                      ><svg class="card-social-icon" width="16" height="16">
+                        <use
+                          href="./images/symbols.svg#icon-linkedin"
+                        ></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- Customers -->
+      <section class="customers">
+        <div class="container">
+          <h2 class="section-title">Customers</h2>
+          <ul class="customers-list list">
+            <li class="customers-item">
+              <a href="" class="customers-link link">
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/symbols.svg#icon-company1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link link">
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/symbols.svg#icon-company2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link link">
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/symbols.svg#icon-company3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link link">
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/symbols.svg#icon-company4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link link">
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/symbols.svg#icon-company5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link link">
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/symbols.svg#icon-company6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -186,14 +392,49 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <div class="container">
-        <a class="footer-logo link" href="./index.html"
-          ><span class="logo-color">Web</span>Studio</a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-wrap">
+        <div class="footer-logo-container">
+          <a class="footer-logo link" href="./index.html"
+            ><span class="logo-color">Web</span>Studio</a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-social-container">
+          <p class="footer-social-text">Social media</p>
+          <ul class="footer-social-list list">
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link link">
+                <svg class="footer-social-icon" width="24" height="24">
+                  <use href="./images/symbols.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link link">
+                <svg class="footer-social-icon" width="24" height="24">
+                  <use href="./images/symbols.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link link">
+                <svg class="footer-social-icon" width="24" height="24">
+                  <use href="./images/symbols.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link link">
+                <svg class="footer-social-icon" width="24" height="24">
+                  <use href="./images/symbols.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
